# IoTdashboardAPI

./: pyproject.toml
config/: settings.py  urls.py
dashboard/: admin.py  models.py  permissions.py  serializers.py  throttles.py  throttls.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_measure_description.py  0003_place_sensor.py  0004_monitoring.py  0005_measure_user.py  0006_alter_measure_title_alter_place_title_and_more.py
